--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,7 @@
 /* This file is for your main application css. */
+@import "../node_modules//bulma/bulma.sass";
 @import "../node_modules/nprogress/nprogress.css";
+
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
