End of the Hero Section
Signed-off-by: Eduardo Borsa <borsa.dado@gmail.com>

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,11 @@
 @import "../node_modules//bulma/bulma.sass";
 @import "../node_modules/nprogress/nprogress.css";
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
